jvimalprasathdev/src/objects/Realtor_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Realtor Contacts</relationshipLabel>
        <relationshipName>Realtor_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Realtor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Realtor Contacts</relationshipLabel>
        <relationshipName>Realtor_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Stay_in_Touch_Request_Date__c</fullName>
        <label>Last Stay-in-Touch Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Stay_in_Touch_Save_Date__c</fullName>
        <label>Last Stay-in-Touch Save Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>Mailing State/Province</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_ZIP_Postal_Code__c</fullName>
        <externalId>true</externalId>
        <label>Mailing ZIP/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Realtor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the flag that is to say that this does not exist already in the Realtor DB</description>
        <label>New Realtor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Leads__c</fullName>
        <label>No.of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Realtor_Id__c</fullName>
        <description>This stores the Id of the original realtor</description>
        <label>Realtor Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_no_of_Leads__c</fullName>
        <label>Total no.of Leads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Realtor Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>New_Realtor__c</columns>
        <columns>Total_no_of_Leads__c</columns>
        <columns>No_of_Leads__c</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Realtor_Id__c</columns>
        <columns>Mailing_ZIP_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Realtor Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Realtor Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>